--- a/public/mop/styles/styles.css
+++ b/public/mop/styles/styles.css
@@ -161,7 +161,7 @@ strong.btn.no-click:hover{
 }
 h2 small, h6 small, h4 small, h5 small{
     font-size: 12px;  
-    color:white;
+
 }
 ul li a {
     white-space: nowrap; 
@@ -213,6 +213,10 @@ img {
 }
 .row-pic .m{
     transition: all 700ms;
+}
+.row-pic .m h2{
+    position: relative;
+    float: right;
 }
 h2{
     font-size: 30px;
