--- a/public/mop/views/check/main.html
+++ b/public/mop/views/check/main.html
@@ -2,10 +2,6 @@
             <div class="row">
             	<div class="col-md-4">
                 	<h1><span class="cond">LATIN</span><span class="bold">X</span><small> SI/NO </small></h1>
-                	
-                	
-                	
-                   
                 </div>
                 <div class="col-md-4">
                     <h1> 👪 {{players}} / 🗳 {{votes}}  </h1>
@@ -13,14 +9,29 @@
                 <div class="col-md-3">
                     <img src="logo.png">
                 </div>
-                <div class="col-md-12">
-                <div class="row">
-                        <div class="row-pic" ng-repeat="i in readyToCheck">
-                            <div class="m" style="margin-left: {{i.percentage}}%;">
-                                <img src="images/{{i.filename}}">
-                            </div>
-                        </div>
+                <div class="row"> <div class="col-md-6" style="
+                    background: blue;
+                    height: 100vh;
+                "> </div> 
+                <div class="col-md-6" style="
+                    background: red;
+                    height: 100vh;
+                "></div>
                 </div>
+                <div class="col-md-12">
+                    <div class="row" ng-repeat="word in words">
+                        <h2> {{word.key}} <small> {{word.count}} </small> </h2>
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <div class="row">
+                            <div class="row-pic" ng-repeat="i in readyToCheck">
+                                <div class="m" style="margin-left: {{i.percentage}}%;">
+                                    <img src="images/{{i.filename}}">
+                                    <h2> {{i.votes}}
+                                </div>
+                            </div>
+                    </div>
                 </div>
 
             </div>
