--- a/public/mop/views/check/main.html
+++ b/public/mop/views/check/main.html
@@ -20,6 +20,7 @@
                     </div>
                 </div>
                 <div class="col-md-12">
+                    <div class="word-cloud"></div>
                     <div class="row" ng-repeat="word in words">
                         <h2> {{word.key}} <small> {{word.count}} </small> </h2>
                     </div>
