--- a/public/mop/styles/styles.css
+++ b/public/mop/styles/styles.css
@@ -205,14 +205,19 @@ img {
 }
 .row-pic{
     max-height: 60px;
-    margin:0;
+    margin: 0;
     overflow: hidden;
+    position: absolute;
+    width: 100%;
+    left: 0;
+    transition: all 300ms;
 }
 .row-pic img{
     max-width: 85px;
 }
 .row-pic .m{
-    transition: all 700ms;
+    transition: all 500ms;
+    transition-delay: 300ms;
 }
 .row-pic .m h2{
     position: relative;
