--- a/public/mop/views/check/end.html
+++ b/public/mop/views/check/end.html
@@ -12,19 +12,13 @@
                 <div class="col-xs-12">
             <div class="row">
                 <div class="col-xs-12">
-                    <h3 class="upper center">Compartilo en:</h3>
+                    <h3 class="upper center">Necesitamos de tu punto de vista, suma imagenes via Twitter con <strong>#ESTOESLATINX</strong></h3>
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-4 share-menu animated dur-2 bounceInUp">
-                    <a class="waves-effect waves-light btn share" href="https://www.facebook.com/sharer/sharer.php?u=%20https%3A//www.huesped.org.ar/aborto-VoF/" target="_blank"><i class="fab fa-facebook fa-2" aria-hidden="true"></i></a>
-                </div>
-                <div class="col-xs-4 share-menu animated dur-2 bounceInUp">
-                    <a ng-href="https://web.whatsapp.com/send?text=Vos, ¿cuánto sabés sobre el debate por el #AbortoLegal? Yo alcancé {{currentGame.points}}/5 respuestas correctas. https://www.huesped.org.ar/aborto-VoF/" target="_blank" class="waves-effect waves-light btn share hidden-xs" href=""><i class="fab fa-whatsapp fa-2" aria-hidden="true"></i></a>
-                    <a ng-href="whatsapp://send?text=Vos, ¿cuánto sabés sobre el debate por el AbortoLegal? Yo alcancé {{currentGame.points}} de 5 respuestas correctas. https://www.huesped.org.ar/aborto-VoF/" target="_blank" class="waves-effect waves-light hidden-md hidden-lg btn share c" ng-click="shareWhatsapp"><i class="fab fa-whatsapp fa-2" aria-hidden="true"></i></a>
-                  </div>
+                
                   <div class="col-xs-4 share-menu animated dur-2 bounceInUp">
-                    <a ng-href="https://twitter.com/intent/tweet?text=Vos,%20%C2%BFcu%C3%A1nto%20sab%C3%A9s%20sobre%20el%20debate%20por%20el%20%23AbortoLegal?%20Yo%20alcanc%C3%A9%20{{currentGame.points}}/5%20respuestas%20correctas.%0A%20https%3A//www.huesped.org.ar/aborto-VoF/" target="_blank" class="waves-effect waves-light btn share" href=""><i class="fab fa-twitter fa-2" aria-hidden="true"></i></a>
+                    <a ng-href="https://twitter.com/intent/tweet?text=#EstoEsLatinX " target="_blank" class="waves-effect waves-light btn share" href=""><i class="fab fa-twitter fa-2" aria-hidden="true"></i></a>
                 </div>
             </div>
         </div>
