--- a/public/mop/views/check/main.html
+++ b/public/mop/views/check/main.html
@@ -1,12 +1,13 @@
 	<div class="container">
             <div class="row">
-            	<div class="col-md-4">
+            	<div class="col-xs-4">
                 	<h1><span class="cond">LATIN</span><span class="bold">X</span><small> SI/NO </small></h1>
                 </div>
-                <div class="col-md-4">
+                <div class="col-xs-4">
                     <h1> 👪 {{players}} / 🗳 {{votes}}  </h1>
+                    <h3> Vota entrando con tu telefono a <strong> bit.ly/latinx-mm </strong> </h3>
                 </div>
-                <div class="col-md-3">
+                <div class="col-xs-3">
                     <img src="logo.png">
                 </div>
                 <div class="col-md-12">
